mqdeploymentconfig/ibmmq-NoConfigMapRef.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: tt-ibm-mqadvanced-server-tls-build
  namespace: da-build-project
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - tt-ibm-mqadvanced-server-tls-build
        from:
          kind: ImageStreamTag
          namespace: da-build-project
          name: 'ibm-mqadvanced-server-tls-build:latest'
  replicas: 1
  selector:
    app: tt-ibm-mqadvanced-server-tls-build
    deploymentconfig: tt-ibm-mqadvanced-server-tls-build
  template:
    metadata:
      labels:
        app: tt-ibm-mqadvanced-server-tls-build
        deploymentconfig: tt-ibm-mqadvanced-server-tls-build
    spec:
      containers:
        - name: tt-ibm-mqadvanced-server-tls-build
          image: >-
            __IMAGE__
          ports:
            - containerPort: 9443
              protocol: TCP
            - containerPort: 1414
              protocol: TCP
            - containerPort: 9157
              protocol: TCP              
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
